[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Gotham_Book_Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://slides/Loose.png" type="Texture" id=2]
[ext_resource path="res://Juego/for_hover.png" type="Texture" id=3]
[ext_resource path="res://slides/Loose_prev.png" type="Texture" id=4]
[ext_resource path="res://Game_over.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 240, 114 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 240, 114 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="Game_over" type="Node"]
script = ExtResource( 5 )

[node name="Loose_prev" type="TextureRect" parent="."]
margin_top = 2.10529
margin_right = 1080.0
margin_bottom = 1922.11
rect_scale = Vector2( 0.46, 0.46 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loose" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.46, 0.46 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Publicidad" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = 14.0
margin_right = 218.0
margin_bottom = 43.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mirar una publicidad y obtener una vida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = 83.2075
margin_right = 218.0
margin_bottom = 112.207
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Continuar y perder progreso"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Publicidad" to="." method="_on_Publicidad_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
